// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should not render invalid children 1`] = `
<List>
  <List
    className=""
    role={null}
  >
    <ul
      className=""
      role={null}
    >
      <ListItem
        className="css-17flzkh"
        isSelected={false}
        key="child-0/.0"
        role={null}
      >
        <li
          className="css-1p5q8vq css-17flzkh css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1nnz83b"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <div
                    className="css-jwxytc"
                  />
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should not render without children 1`] = `<List />`;

exports[`<List /> should render with two children 1`] = `
<List>
  <List
    className=""
    role={null}
  >
    <ul
      className=""
      role={null}
    >
      <ListItem
        className="css-17flzkh"
        isSelected={false}
        key="child-0/.0"
        role={null}
      >
        <li
          className="css-1p5q8vq css-17flzkh css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1nnz83b"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <div
                    className="css-jwxytc"
                  />
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-17flzkh"
        isSelected={false}
        key="child-1/.1"
        role={null}
      >
        <li
          className="css-1p5q8vq css-17flzkh css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1nnz83b"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <div
                    className="css-jwxytc"
                  />
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;
